# watermetrics

./: .gitignore  README.md  app.py  main.py  paper.tex  pyproject.toml  requirements.txt  run.sh  run_comparison.py  run_training.py
src/wq_hybrid/: __init__.py  baselines.py  compare.py  config.py  data.py  graph.py  model.py  train.py  tuning.py  visualize.py  wqi.py
